<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_default">

    <EditText
        android:id="@+id/email_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:lines="1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:hint="@string/name"
        android:lines="1"
        app:layout_constraintTop_toBottomOf="@id/email_ET" />

    <EditText
        android:id="@+id/amount_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:lines="1"
        app:layout_constraintTop_toBottomOf="@id/name_ET" />

    <EditText
        android:id="@+id/desc_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:layout_marginTop="@dimen/margin_default"
        app:layout_constraintTop_toBottomOf="@id/amount_ET" />

    <Button
        android:id="@+id/send_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/send"
        app:layout_constraintTop_toBottomOf="@id/desc_ET" />

    <FrameLayout
        android:id="@+id/view_blocker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:elevation="100dp"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>